--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="src/styles.css" />
+    <title>Weather App</title>
+    <link rel="stylesheet" href="src/style.css" />
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
