Open Source Link added

--- a/index.html
+++ b/index.html
@@ -89,5 +89,8 @@
       
     </div>
     <script src="src/script.js"></script>
+  <footer>
+  <a href src="https://github.com/Katherine1983-jpg/Weather-App"> Open-Source Code </a> by Katherine Simpson
+</footer>
   </body>
 </html>
