Updated Source Code Link

--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
       <br />
       
     </div>
+    <footer>
+  <a href ="https://github.com/Katherine1983-jpg/Weather-App" target="_blank"> Open-Source Code </a> by Katherine Simpson
+</footer>
     <script src="src/script.js"></script>
   <footer>
-  <a href src="https://github.com/Katherine1983-jpg/Weather-App"> Open-Source Code </a> by Katherine Simpson
-</footer>
   </body>
 </html>
